fix: 🐛 分享-动态加上自己数据、评论数据改为平铺展示、评论表情选择器的位置